--- a/src/pages/controles/controles.html
+++ b/src/pages/controles/controles.html
@@ -1,18 +1,81 @@
-<!--
-  Generated template for the Controles page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="ifeep">
     <ion-title>controles</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content class="background-controles">
+  <h1 text-center>Mis Controles</h1>
+    <ion-card>
+      <ion-grid>
+        <ion-row>
+          <ion-col col-4>
+               <img src="assets/img/riñon.png" alt="">
+          </ion-col>
+          <ion-col col-8 text-right>
+            <button ion-button clear >
+               <ion-icon name="more"></ion-icon>
+            </button>
+             <h2>Control de Examenes Periodicos</h2>
+             <p>Periodico / Renal</p>
+             <button ion-button item-right color="ifeep" (click)="irAPeriodicos()">ver más</button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card>
+    <ion-card>
+      <ion-grid>
+        <ion-row>
+          <ion-col col-4>
+               <img src="assets/img/corazon.png" alt="">
+          </ion-col>
+          <ion-col col-8 text-right>
+            <button ion-button clear >
+               <ion-icon name="more"></ion-icon>
+            </button>
+             <h2>Control de Examenes Especializados</h2>
+             <p>Neurologico / Cardiovascular / Oftalmologico</p>
+             <button ion-button item-right color="ifeep" (click)="irAEspecializado()">ver más</button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card>
+    <ion-card>
+      <ion-grid>
+        <ion-row>
+          <ion-col col-4>
+               <img src="assets/img/vacunacion.png" alt="">
+          </ion-col>
+          <ion-col col-8 text-right>
+            <button ion-button clear >
+               <ion-icon name="more"></ion-icon>
+            </button>
+             <h2>Registro de Pesquisajes y Vacunacion</h2>
+             <p>Cancer / Tuberculosis / Vacunacion</p>
+             <button ion-button item-right color="ifeep" (click)="irAPesquizaje()">ver más</button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card>
+    <ion-card>
+      <ion-grid>
+        <ion-row>
+          <ion-col col-4>
+               <img src="assets/img/glucemia.png" alt="">
+          </ion-col>
+          <ion-col col-8 text-right>
+            <button ion-button clear >
+               <ion-icon name="more"></ion-icon>
+            </button>
+             <h2>Control de Glucemia en Casa</h2>
+             <p>Frecuencia segun indicacion medica</p>
+             <button ion-button item-right color="ifeep" (click)="irAGlucemia()">ver más</button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card>
 </ion-content>
