--- a/src/pages/formulario/formulario.html
+++ b/src/pages/formulario/formulario.html
@@ -1,16 +1,16 @@
 <ion-header>
   <ion-navbar color="ifeep">
-    <ion-title></ion-title>
+    <ion-title>Formulario datos</ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding>
-  <h3 text-center>Por Favor llena el siguiente formulario, el cual nos servirá para poder ayudarte </h3>
+  <h6 text-center>Por Favor llena el siguiente formulario, el cual nos servirá para poder ayudarte </h6>
   <form [formGroup]="dataInicial">
     <ion-list>
       <!--Aqui el input con validaciones para el nombre-->
       <ion-item >
-        <ion-label floating>Nombres</ion-label>
-        <ion-input formControlName="nombres" type="text" placeholder="Nombres"></ion-input>
+        <ion-label stacked>Nombres</ion-label>
+        <ion-input formControlName="nombres" type="text"></ion-input>
       </ion-item>
       <ion-item *ngIf="dataInicial.get('nombres').errors && dataInicial.get('nombres').dirty">
         <p color="danger" ion-text *ngIf="dataInicial.get('nombres').hasError('required')">Este campo es requerido</p>
@@ -19,8 +19,8 @@
 
       <!--input de los apellidos con notificaciones de errores-->
       <ion-item >
-        <ion-label floating>Apellidos</ion-label>
-        <ion-input formControlName="apellidos" type="text" placeholder="Apellidos"></ion-input>
+        <ion-label stacked>Apellidos</ion-label>
+        <ion-input formControlName="apellidos" type="text"></ion-input>
       </ion-item>
       <ion-item *ngIf="dataInicial.get('apellidos').errors && dataInicial.get('apellidos').dirty">
         <p color="danger" ion-text *ngIf="dataInicial.get('apellidos').hasError('required')">Este campo es requerido</p>
@@ -28,42 +28,42 @@
       <!--fin de apellidos y sus validaciones-->
 
       <ion-item >
-        <ion-label floating>Telefono</ion-label>
-        <ion-input formControlName="telefono" type="number" placeholder="Telefono"></ion-input>
+        <ion-label stacked>Telefono</ion-label>
+        <ion-input formControlName="telefono" type="number"></ion-input>
       </ion-item>
 
       <ion-item >
-        <ion-label floating>DNI</ion-label>
+        <ion-label stacked>DNI</ion-label>
         <ion-input type="text"></ion-input>
       </ion-item>
 
       <ion-item >
-        <ion-label floating>Email:</ion-label>
+        <ion-label stacked>Email:</ion-label>
         <ion-input type="email" ></ion-input>
       </ion-item>
 
       <ion-item >
-        <ion-label floating>País</ion-label>
+        <ion-label stacked>País</ion-label>
         <ion-input type="text"></ion-input>
       </ion-item>
 
       <ion-item >
-        <ion-label floating>Ciudad</ion-label>
+        <ion-label stacked>Ciudad</ion-label>
         <ion-input type="text"></ion-input>
       </ion-item>
 
       <ion-item >
-        <ion-label floating>Distrito</ion-label>
+        <ion-label stacked>Distrito</ion-label>
         <ion-input type="text"></ion-input>
       </ion-item>
 
       <ion-item >
-        <ion-label floating>Edad</ion-label>
+        <ion-label stacked>Edad</ion-label>
         <ion-input type="age"></ion-input>
       </ion-item>
 
       <ion-item >
-        <ion-label floating>Sexo</ion-label>
+        <ion-label stacked>Sexo</ion-label>
         <ion-input type="text"></ion-input>
       </ion-item>
     </ion-list>
