--- a/src/pages/temas/temas.html
+++ b/src/pages/temas/temas.html
@@ -1,18 +1,22 @@
-<!--
-  Generated template for the Temas page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="morado">
     <ion-title>temas</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content>
+  <ion-list *ngFor="let li of lista">
+    <ion-item>
+      <ion-thumbnail item-start>
+        <img [src]="li.imagen" alt="">
+      </ion-thumbnail>
+        <h2>{{li.titulo}}</h2>
+        <p>{{li.contenido}}</p>
+        <button ion-button item-end clear (click)="irADetalle(li)">ver mas</button>
+    </ion-item>
+  </ion-list>
 </ion-content>
